	(soap-resolve-references-for-binding): request only port type
	elements.
	(soap-resolve-references-for-port): request only binding type
	elements.
	(soap-parse-complex-type): look for a name in an attribute tag
	(soap-wsdl-get): use a PREDICATE argument to specify the type of
	element requested. All callers updated.
	(soap-parse-sequence): accept elements that have inline
	complexType definitions.
	(soap-default-xsd-types): use the
	"http://www.w3.org/2001/XMLSchema" as XMLSchema.
	(soap-parse-schema): parse toplevel element tags
	(soap-parse-schema-element): new function
	(soap-parse-complex-type): handle empty complex types

2010-04-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-login): bugfix: pass username and password to
	the jira web login page.
	(jira2-login, jira2-link-issue): add basic check that the URL
	response is OK.
	(jira2-login, jira2-link-issue): `url-http-response-status' is
	only bound in the response buffer

2010-04-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-token): new variable
	(jira2-login): login into the jira web application as well.
	(jira2-link-issue): new function, uses JIRA web interface instead
	of the SOAP api

2010-03-31  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-load-wsdl-from-url): check that we have
	retrieved an XML document before passing it to `xml-parse-region'

2010-02-11  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-do-jql-search, jira2-get-available-actions)
	(jira2-get-fields-for-action, jira2-progress-workflow-action): new
	functions.

2009-12-14  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-wsdl-descriptor-url): add type and group to
	defcustom

2009-12-07  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* jira2.el (jira2-update-issue)
	(jira2-create-issue): use car on the jira call result

	* soap-client.el (soap-encode-basic-type): use
	`url-insert-entities-in-string` when inserting the user data into
	the message
